p5-test-www-mechanize: update to 1.30, add modeline; see #26434
git-svn-id: https://svn.macports.org/repository/macports/trunk@71939 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-test-www-mechanize/Portfile
+++ b/dports/perl/p5-test-www-mechanize/Portfile
@@ -1,16 +1,17 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem            1.0
 PortGroup             perl5 1.0
 
-perl5.setup           Test-WWW-Mechanize 1.28
+perl5.setup           Test-WWW-Mechanize 1.30
 maintainers           narf_tm openmaintainer
 description           Testing-specific WWW::Mechanize subclass
 long_description      ${description}
 
-checksums             md5 6f4b87f8502cf5096be8b03ae5b76d86 \
-                      sha1 363ba7589f4ebb0614f8729ffe017e54a0e7168b \
-                      rmd160 c80ca1ef10ea3f52bd0710011a75bffb2928479f
+checksums             md5     a0d70d501e26e398f47bf0b3a5be0483 \
+                      sha1    025037d52d0968f9e5a42e9bbbf0c500e78ca829 \
+                      rmd160  da1f12ae7feac9486b10c37cfd3573610ea226f8
 
 platforms             darwin
 
