p5-mime-lite: update to 3.027, add p5-email-date-format dependency; see #23527
git-svn-id: https://svn.macports.org/repository/macports/trunk@71941 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-mime-lite/Portfile
+++ b/dports/perl/p5-mime-lite/Portfile
@@ -3,14 +3,15 @@
 PortSystem		1.0
 PortGroup		perl5 1.0
 
-perl5.setup		MIME-Lite 3.021
+perl5.setup		MIME-Lite 3.027
 maintainers		nomaintainer
 description		a low-calorie MIME generator
 long_description	${description}
 platforms		darwin
-checksums \
-    md5     7b3f4b9b3f8a0023dbc62859ef9a775f \
-    sha1    198c0fffa6d29c28bc0bb3c535116bda37def587 \
-    rmd160  d01f24ecb6d6d154546bedbc73234b3bedf476a4
+supported_archs         noarch
 
-supported_archs noarch
+checksums               md5     e857febd66c45f2a5919b031fbe70aa7 \
+                        sha1    61ec42f1f8e7d66cd8ed26c234745d621b056a63 \
+                        rmd160  b16f4df71ee2eb766df77b9cbe4fe58c3e9e98e5
+
+depends_lib-append      port:p5-email-date-format
