libhsplasma: add variants for debugging network communications
git-svn-id: https://svn.macports.org/repository/macports/trunk@71943 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -28,6 +28,8 @@ depends_lib                 port:zlib \
                             port:openssl \
                             port:python26
 
+patchfiles                  patch-commdebug.diff
+
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
                             -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib
@@ -51,6 +53,16 @@ if {[variant_isset debug]} {
     configure.optflags -O1
     configure.cflags-append -ggdb
     configure.cxxflags-append -ggdb
+}
+
+variant commdebug description {Debug network communications (high-level)} {
+    configure.cflags-append     -DCOMMDEBUG
+    configure.cxxflags-append   -DCOMMDEBUG
+}
+
+variant commdebug2 description {Debug network communications (low-level)} {
+    configure.cflags-append     -DCOMMDEBUG2
+    configure.cxxflags-append   -DCOMMDEBUG2
 }
 
 livecheck.type              regex
