--- a/dports/net/whois/Portfile
+++ b/dports/net/whois/Portfile
@@ -15,6 +15,7 @@ PortGroup                   archcheck 1.0
 name                        whois
 conflicts                   bahamut ripe-whois
 version                     5.0.7
+revision                    1
 categories                  net
 maintainers                 ryandesign
 homepage                    http://www.linux.it/~md/software/
@@ -35,11 +36,19 @@ checksums                   md5     bab31f39eb4328b489027091b964c174 \
 distname                    ${name}_${version}
 worksrcdir                  ${name}-${version}
 
-depends_lib                 port:gettext
-archcheck.files             lib/libintl.dylib
+depends_lib                 port:gettext \
+                            port:libidn \
+                            port:libiconv
+
+archcheck.files             lib/libintl.dylib \
+                            lib/libidn.dylib \
+                            lib/libiconv.dylib
 
 # Bugs should be reported to MacPorts, not upstream.
 patchfiles-append           patch-bugreport.diff
+
+# Add libidn and libiconv support.
+patchfiles-append           patch-idn-iconv.diff
 
 platform darwin {
     # -lcrypt cannot be used (and is unnecessary) on Mac OS X
@@ -67,6 +76,8 @@ if {[variant_isset universal]} {
 build.target-append         pos
 build.env                   CC="${configure.cc} ${archflags}" \
                             CONFIG_FILE=${prefix}/etc/whois.conf \
+                            HAVE_LIBIDN=1 \
+                            HAVE_ICONV=1 \
                             LOCALEDIR=${prefix}/share/locale
 build.args                  prefix=${prefix} \
                             INCLUDES="${configure.cflags} ${configure.cppflags}" \
