p5-net-frame: add description; see #26656
git-svn-id: https://svn.macports.org/repository/macports/trunk@71954 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-net-frame/Portfile
+++ b/dports/perl/p5-net-frame/Portfile
@@ -9,9 +9,17 @@ platforms           darwin
 maintainers         nomaintainer
 supported_archs     noarch
 
-description         Net::Frame
+description         framework for crafting network packets
 
-long_description    ${description}
+long_description    Net::Frame is a ${description}. \
+                    It comes with a set of basic layers \
+                    (e.g. Net::Frame::Layer::TCP). \
+                    The different layer subclasses handle encoding and \
+                    decoding of the given layer. \
+                    It allows one to construct a protocol stack from the \
+                    top to bottom layers and then inject those packets \
+                    into the network for communication with other devices \
+                    that talk the same protocol.
 
 checksums           sha1    79af535c315b7acae9d7c3937aecdfea54730ca0 \
                     rmd160  c0dcfca5380a16152633c3dace289d0b8f2d4ffc
