PlasmaClient: update to 239, and now keep at most 10 log files
git-svn-id: https://svn.macports.org/repository/macports/trunk@71956 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/files/PlasmaClient.in
+++ b/dports/games/PlasmaClient/files/PlasmaClient.in
@@ -19,9 +19,16 @@ if [ -z "$USERNAME" -o -z "$PASSWORD" ]; then
     usage
 fi
 
+LOGDIR="@PREFIX@/var/log/PlasmaClient"
+KEEPLOGS=10
+cd "${LOGDIR}"
+ls PlasmaClient.*.log 2>/dev/null | sort -n -r | sed "1,$((${KEEPLOGS} - 1))d" | xargs rm -f
+
+LOGFILE="PlasmaClient.$(date '+%s').log"
+LOGLINK="PlasmaClient.log"
+rm -f "${LOGDIR}/${LOGLINK}"
+ln -s "${LOGFILE}" "${LOGDIR}/${LOGLINK}"
+echo "Logging to ${LOGDIR}/${LOGFILE}"
+
 cd "@PREFIX@/share/mystonline/data"
-
-LOGFILE="@PREFIX@/var/log/PlasmaClient/PlasmaClient.$(date '+%s').log"
-echo "Logging to $LOGFILE"
-
-"@PREFIX@/bin/PlasmaClient" "$USERNAME" "$PASSWORD" > "$LOGFILE" 2>&1
+"@PREFIX@/bin/PlasmaClient" "${USERNAME}" "${PASSWORD}" > "${LOGDIR}/${LOGFILE}" 2>&1
