--- a/dports/ruby/rb-gconf/Portfile
+++ b/dports/ruby/rb-gconf/Portfile
@@ -3,7 +3,7 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{gconf ruby-gnome2} 0.19.4 extconf.rb \
+ruby.setup		{gconf ruby-gnome2} 0.90.2 extconf.rb \
 				{ gconf/README gconf/sample } \
 				sourceforge:ruby-gnome2
 revision		0
@@ -13,17 +13,13 @@ description		Gconf libraries for ruby (a part of Ruby-Gnome2)
 long_description	Gconf libraries for ruby (a part of Ruby-Gnome2)
 categories-append	gnome
 license			LGPLv2
-checksums		md5 40451e4173e2c8bcd5046aea7e499ef9 \
-				rmd160 11a102c28d00f8f5a7b2baeb2370a6d794cfb7d9 \
-				sha1 6fbaf51cced8cc15158144e15898244f2ebf6870
+checksums		md5 b25065050aeed8f94c235bee9d4ddf3e \
+				rmd160 fbfdbd73b7b0b216ba6e6e0f30a3d208a6bf8e02 \
+				sha1 a91a2cda9b90192eb9c8b2a84125059859342e1a
 configure.env	RUBYOPT=-rvendor-specific
 configure.args		--strict gconf
-depends_lib-append	port:gconf
+depends_lib-append	port:gconf port:rb-pkg-config
 distname		${ruby.project}-all-${version}
-
-pre-destroot {
-	xinstall -d ${destroot}${prefix}/lib/pkgconfig
-}
 
 # for developer only, this test requires rb-gtk2
 #test.run		yes
