--- a/dports/ruby/rb-glib2/Portfile
+++ b/dports/ruby/rb-glib2/Portfile
@@ -3,8 +3,8 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{glib2 ruby-gnome2} 0.19.4 extconf.rb \
-				{ glib/README glib/sample } \
+ruby.setup		{glib2 ruby-gnome2} 0.90.2 extconf.rb \
+				{ glib2/README glib2/sample } \
 				sourceforge:ruby-gnome2
 revision		0
 maintainers		kimuraw
@@ -13,20 +13,17 @@ description		Ruby/GLib2 is a Ruby binding of GLib-2.x.
 long_description	Ruby/GLib2 is a Ruby binding of GLib-2.x.
 categories-append	gnome
 license			LGPLv2
-checksums		md5 40451e4173e2c8bcd5046aea7e499ef9 \
-				rmd160 11a102c28d00f8f5a7b2baeb2370a6d794cfb7d9 \
-				sha1 6fbaf51cced8cc15158144e15898244f2ebf6870
+checksums		md5 b25065050aeed8f94c235bee9d4ddf3e \
+				rmd160 fbfdbd73b7b0b216ba6e6e0f30a3d208a6bf8e02 \
+				sha1 a91a2cda9b90192eb9c8b2a84125059859342e1a
 configure.env	RUBYOPT=-rvendor-specific
-configure.args	--strict glib
-depends_lib-append	path:lib/pkgconfig/glib-2.0.pc:glib2
+configure.args	--strict glib2
+depends_lib-append	path:lib/pkgconfig/glib-2.0.pc:glib2 \
+				port:rb-pkg-config
 distname		${ruby.project}-all-${version}
-
-pre-destroot {
-	xinstall -d ${destroot}${prefix}/lib/pkgconfig
-}
 
 # NOTE: for developer only. this test launches X11.app.
 #test.run		yes
 test.cmd		${ruby.bin}
-test.target		glib/test/run-test.rb
+test.target		glib2/test/run-test.rb
 
