--- a/dports/ruby/rb-gnomeprint/Portfile
+++ b/dports/ruby/rb-gnomeprint/Portfile
@@ -3,7 +3,7 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{gnomeprint ruby-gnome2} 0.19.4 extconf.rb \
+ruby.setup		{gnomeprint ruby-gnome2} 0.90.2 extconf.rb \
 				{ gnomeprint/README gnomeprint/sample } \
 				sourceforge:ruby-gnome2
 revision		0
@@ -13,22 +13,18 @@ description		Ruby/GnomePrint is a Ruby binding of libgnomeprint.
 long_description	Ruby/GnomePrint is a Ruby binding of libgnomeprint.
 categories-append	gnome
 license			LGPLv2
-checksums		md5 40451e4173e2c8bcd5046aea7e499ef9 \
-				rmd160 11a102c28d00f8f5a7b2baeb2370a6d794cfb7d9 \
-				sha1 6fbaf51cced8cc15158144e15898244f2ebf6870
+checksums		md5 b25065050aeed8f94c235bee9d4ddf3e \
+				rmd160 fbfdbd73b7b0b216ba6e6e0f30a3d208a6bf8e02 \
+				sha1 a91a2cda9b90192eb9c8b2a84125059859342e1a
 configure.env	RUBYOPT=-rvendor-specific
 configure.args	--strict gnomeprint
 depends_lib-append	port:libgnomeprint port:rb-glib2 port:rb-pango \
-				port:rb-libart
+				port:rb-libart port:rb-pkg-config
 distname		${ruby.project}-all-${version}
-
-pre-destroot {
-	xinstall -d ${destroot}${prefix}/lib/pkgconfig
-}
 
 ## genearte header files for testing
 #pre-configure	{
-#	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib"
+#	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib2"
 #}
 #test.run		yes
 test.cmd        ${ruby.bin}
