--- a/dports/ruby/rb-gtk2/Portfile
+++ b/dports/ruby/rb-gtk2/Portfile
@@ -3,8 +3,8 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{gtk2 ruby-gnome2} 0.19.4 extconf.rb \
-				{ gtk/README gtk/sample gdkpixbuf/sample } \
+ruby.setup		{gtk2 ruby-gnome2} 0.90.2 extconf.rb \
+				{ gtk2/README gtk2/sample gdk_pixbuf2/sample } \
 				sourceforge:ruby-gnome2
 revision		0
 maintainers		kimuraw
@@ -14,27 +14,23 @@ description		Ruby/GTK2 is a Ruby binding of GTK+-2.0.x. \
 long_description	Ruby/GTK2 is a Ruby binding of GTK+-2.0.x. \
 				Ruby/GdkPixbuf2 is a Ruby binding of GdkPixbuf-2.x.
 license			LGPLv2
-checksums		md5 40451e4173e2c8bcd5046aea7e499ef9 \
-				rmd160 11a102c28d00f8f5a7b2baeb2370a6d794cfb7d9 \
-				sha1 6fbaf51cced8cc15158144e15898244f2ebf6870
+checksums		md5 b25065050aeed8f94c235bee9d4ddf3e \
+				rmd160 fbfdbd73b7b0b216ba6e6e0f30a3d208a6bf8e02 \
+				sha1 a91a2cda9b90192eb9c8b2a84125059859342e1a
 # generate glib-enum-types.h at glib/src and glib/pango
 pre-configure	{
-	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib pango"
+	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib2 pango"
 }
 configure.env	RUBYOPT=-rvendor-specific
-configure.args	--strict gtk gdkpixbuf
+configure.args	--strict gtk2 gdk_pixbuf2
 depends_lib-append	port:gtk2 port:rb-pango port:rb-rcairo port:rb-glib2 \
-				port:rb-atk
+				port:rb-atk port:rb-pkg-config
 distname		${ruby.project}-all-${version}
 
-pre-destroot {
-	xinstall -d ${destroot}${prefix}/lib/pkgconfig
-}
-
-# patch-gtk-test-run-test.rb.diff: do not build dependent libraries at testing
-patchfiles		patch-gtk-test-run-test.rb.diff
-# Run Test for developer only, the test launches X11.app
+## patch-gtk-test-run-test.rb.diff: do not build dependent libraries at testing
+#patchfiles		patch-gtk2-test-run-test.rb.diff
+## Run Test for developer only, the test launches X11.app
 #test.run		yes
 test.cmd		${ruby.bin}
-test.target		-C gtk test/run-test.rb
+test.target		-C gtk2 test/run-test.rb
 
