--- a/dports/ruby/rb-poppler/Portfile
+++ b/dports/ruby/rb-poppler/Portfile
@@ -3,34 +3,30 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		{poppler ruby-gnome2} 0.19.4 extconf.rb \
+ruby.setup		{poppler ruby-gnome2} 0.90.2 extconf.rb \
 				{ poppler/README poppler/sample } \
 				sourceforge:ruby-gnome2
-revision		2
+revision		0
 maintainers		kimuraw
 platforms		darwin
 description		Ruby/Poppler is a Ruby binding of poppler-glib.
 long_description	Ruby/Poppler is a Ruby binding of poppler-glib.
 categories-append	gnome
 license			LGPLv2
-checksums		md5 40451e4173e2c8bcd5046aea7e499ef9 \
-				rmd160 11a102c28d00f8f5a7b2baeb2370a6d794cfb7d9 \
-				sha1 6fbaf51cced8cc15158144e15898244f2ebf6870
+checksums		md5 b25065050aeed8f94c235bee9d4ddf3e \
+				rmd160 fbfdbd73b7b0b216ba6e6e0f30a3d208a6bf8e02 \
+				sha1 a91a2cda9b90192eb9c8b2a84125059859342e1a
 configure.env	RUBYOPT=-rvendor-specific
 configure.args	--strict poppler
 depends_lib-append	port:poppler port:rb-glib2 port:rb-gtk2 \
-					port:rb-rcairo
+					port:rb-rcairo port:rb-pkg-config
 distname		${ruby.project}-all-${version}
 
-pre-destroot {
-	xinstall -d ${destroot}${prefix}/lib/pkgconfig
-}
-
-## for developer, this test launched X11.app
+## for developer, this test launches X11.app
 #test.run		yes
 ## genearte header files for testing
 #pre-configure	{
-#	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib atk pango gdkpixbuf gtk"
+#	system "${ruby.bin} -C ${worksrcpath} extconf.rb --strict glib2 atk pango gdk_pixbuf2 gtk2"
 #}
 test.cmd		${ruby.bin}
 test.target		-C poppler test/run-test.rb
