upclient: cleanup, add sha1
git-svn-id: https://svn.macports.org/repository/macports/trunk@71959 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/upclient/Portfile
+++ b/dports/net/upclient/Portfile
@@ -9,16 +9,18 @@ categories      net
 maintainers     nomaintainer
 platforms       darwin
 description     uptime sharing utility.
-long_description        ${description}
+long_description ${description}
 homepage        http://upclient.sourceforge.net/
 master_sites    sourceforge
-checksums       md5 5d2ac85193fdb898dd16a694b05ac4d0
-worksrcdir      upclient-5.0b8/src
+checksums       md5 5d2ac85193fdb898dd16a694b05ac4d0 \
+                sha1 cffc7e232aa9eb487ec0206df2963a2f2c528a6d
+worksrcdir      ${worksrcdir}/src
 use_configure   no    
-build.target    darwin prefix=${prefix}
-destroot.destdir        prefix=${prefix} \
-                        destdir=${destroot} \
-                        mandir=${prefix}/share/man
+build.target    ${os.platform}
+build.args      prefix="${prefix}"
+destroot.destdir destdir="${destroot}"
+destroot.args   prefix="${prefix}" \
+                mandir="${prefix}/share/man"
 post-extract {
     reinplace "s|uptimes.wonko.com|uptimes.hostingwired.com|g" ${worksrcpath}/Makefile
 }
