libhsplasma: add some fixes for endian issues in networking code on PowerPC
git-svn-id: https://svn.macports.org/repository/macports/trunk@71960 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -28,7 +28,8 @@ depends_lib                 port:zlib \
                             port:openssl \
                             port:python26
 
-patchfiles                  patch-commdebug.diff
+patchfiles                  patch-commdebug.diff \
+                            patch-endian.diff
 
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
