--- a/dports/net/upclient/Portfile
+++ b/dports/net/upclient/Portfile
@@ -8,6 +8,7 @@ version         5.0b8
 categories      net
 maintainers     nomaintainer
 platforms       darwin
+license         GPL-2+
 description     uptime sharing utility.
 long_description ${description}
 homepage        http://upclient.sourceforge.net/
@@ -17,12 +18,19 @@ checksums       md5 5d2ac85193fdb898dd16a694b05ac4d0 \
 worksrcdir      ${worksrcdir}/src
 use_configure   no    
 build.target    ${os.platform}
-build.args      prefix="${prefix}"
+build.args      prefix="${prefix}" MAKEFLAGS="" CC=${configure.cc}
 destroot.destdir destdir="${destroot}"
 destroot.args   prefix="${prefix}" \
                 mandir="${prefix}/share/man"
-post-extract {
+post-patch {
     reinplace "s|uptimes.wonko.com|uptimes.hostingwired.com|g" ${worksrcpath}/Makefile
+    reinplace {s|CC=[a-z]*[:space:]| |g} ${worksrcpath}/Makefile
+}
+
+platform darwin {
+    if {${os.major} >= 9} {
+        patchfiles-append no-kvm.patch
+    }
 }
 
 startupitem.create      yes
