py26-pymongo: reformat Portfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@71963 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymongo/Portfile
+++ b/dports/python/py26-pymongo/Portfile
@@ -1,17 +1,19 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 PortGroup           python26 1.0
+
 name                py26-pymongo
 version             1.8.1
 categories-append   databases
+platforms           darwin
 maintainers         nomaintainer
+
 description         Python access to mongodb
 long_description \
-   The PyMongo distribution contains tools for interacting with the Mongo \
-   database from Python.
-
-platforms           darwin
+        The PyMongo distribution contains tools for interacting with \
+        the Mongo database from Python.
 
 homepage            http://www.mongodb.org/
 master_sites        http://pypi.python.org/packages/source/p/pymongo/
