py26-pymongo: teke maintainership
git-svn-id: https://svn.macports.org/repository/macports/trunk@71964 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pymongo/Portfile
+++ b/dports/python/py26-pymongo/Portfile
@@ -8,7 +8,7 @@ name                py26-pymongo
 version             1.8.1
 categories-append   databases
 platforms           darwin
-maintainers         nomaintainer
+maintainers         stromnov openmaintainer
 
 description         Python access to mongodb
 long_description \
