gnome-doc-utils: update to version 2.20.2, remove +python25 variant since all GNOME ports now use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71966 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-doc-utils/Portfile
+++ b/dports/gnome/gnome-doc-utils/Portfile
@@ -4,7 +4,7 @@
 PortSystem  1.0
 
 name           gnome-doc-utils
-version        0.20.1
+version        0.20.2
 set branch     [join [lrange [split ${version} .] 0 1] .]
 description    GNOME document utils.
 long_description \
@@ -20,52 +20,37 @@ supported_archs noarch
 homepage       http://www.gnome.org/
 master_sites   gnome:sources/${name}/${branch}/
 
-checksums      md5     19e67da738497f82a2a36a603953f588 \
-               sha1    7fa71459c20c7c98b052f4f8983bb53073230d31 \
-               rmd160  335c143121d34184eb88831ac4bef1189f0f857d
+checksums      md5     920914c13c57e67616c6ff8594579786 \
+               sha1    afb77988153e3cae2567aa47f24345ac6ae41920 \
+               rmd160  c5b4d497f9cc68aea9105ac909df9282cd52c1e0
 
 use_bzip2      yes
 
 # http://trac.macports.org/ticket/23954
 use_parallel_build  no
 
-depends_build  \
-    port:intltool \
-    port:pkgconfig
+depends_build  port:intltool \
+               port:pkgconfig
 
-depends_lib    \
-    port:gettext \
-    port:libxslt \
-    port:python26
+depends_lib    port:gettext \
+               port:libxslt \
+               port:python26
 
 
-depends_run    \
-    port:docbook-xml \
-    port:docbook-xsl \
-    port:rarian \
-    port:iso-codes \
-    port:py26-libxml2
+depends_run    port:docbook-xml \
+               port:docbook-xsl \
+               port:rarian \
+               port:iso-codes \
+               port:py26-libxml2
 
 configure.env-append  INTLTOOL_PERL=${prefix}/bin/perl
-configure.args         --disable-scrollkeeper \
-                       --mandir=${prefix}/share/man \
-                       am_cv_python_pythondir=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/site-packages/
+configure.args        --disable-scrollkeeper \
+                      am_cv_python_pythondir=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/site-packages/
 
-# Default to 2.6 since 2.5 fails universal on Leopard... Ticket #17501
-
-configure.python        ${prefix}/bin/python2.6
+configure.python ${prefix}/bin/python2.6
 
 post-activate  {
     system "${prefix}/bin/scrollkeeper-update"
-}
-
-variant python25 description {Configure to use python 2.5 instead of default 2.6} {
-    depends_lib-delete      port:python26
-    depends_lib-append      port:python25
-    depends_run-delete      port:py26-libxml2
-    depends_run-append      port:py25-libxml2
-    configure.python        ${prefix}/bin/python2.5
-    configure.args-delete   am_cv_python_pythondir=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/site-packages/
 }
 
 livecheck.type      regex
