orbit2: update to version 2.14.19, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71967 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/orbit2/Portfile
+++ b/dports/devel/orbit2/Portfile
@@ -6,7 +6,7 @@ PortGroup       muniversal 1.0
 
 name            orbit2
 set my_name     ORBit2
-version         2.14.18
+version         2.14.19
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      devel gnome
@@ -21,18 +21,16 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums           md5     3e80596171b1ea652707219c7144ff53 \
-                    sha1    76074570d3fc08d4e62d37f02023fe1af3b7be3f \
-                    rmd160  8105c7323869be38a21de562878150f25da17f17
+checksums       md5     7082d317a9573ab338302243082d10d1 \
+                sha1    e7c26aa4b82c146b3ec08d490e3469b4913e4e2f \
+                rmd160  e16c1697efc4ad3dafca47828954f39438b4a8d4
 
-# patchfiles      patch-which-gtkdoc-rebase.diff
 
-depends_build   port:pkgconfig
+depends_build   port:pkgconfig \
+                port:gtk-doc
 
 depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 port:libidl
-
-use_parallel_build  yes
 
 # This file doesn't merge right for 3-way universal
 set merger_dont_diff "${prefix}/include/orbit-2.0/orbit/orbit-config.h"
