--- a/dports/gnome/gnome-vfsmm/Portfile
+++ b/dports/gnome/gnome-vfsmm/Portfile
@@ -20,7 +20,7 @@ checksums        md5     d27d34b6a8722c557366729071c1baab \
                  sha1    a8a8093c3b99b3391981b5ff063ba32f91af4479 \
                  rmd160  3181c6671c0af2e31c9a06a969e1754cae3167ca
 
-depends_build    port:doxygen
+depends_build    port:pkgconfig
 
 depends_lib      port:glibmm \
                  port:gnome-vfs
