tbb: update to version 3.0 (closes #25469)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71975 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/tbb/Portfile
+++ b/dports/devel/tbb/Portfile
@@ -4,8 +4,8 @@
 PortSystem          1.0
 
 name                tbb
-set rel_date        20090809
-set vers            2.2
+set rel_date        20100406
+set vers            3.0
 version             ${vers}-${rel_date}
 revision            1
 maintainers         mnick openmaintainer
@@ -19,14 +19,14 @@ license             GPL
 platforms           darwin
 
 homepage            http://www.threadingbuildingblocks.org
-master_sites        ${homepage}/uploads/77/142/${vers}/
-worksrcdir          ${name}22_${rel_date}oss
+master_sites        ${homepage}/uploads/77/151/${vers}/
+worksrcdir          ${name}30_${rel_date}oss
 distname            ${worksrcdir}_src
 extract.suffix      .tgz
 
-checksums           md5     c621053887c7ee86932da43e2deb3bff \
-                    sha1    12af8e2bdddb51aa62312523a70ebf2a0f6de8d6 \
-                    rmd160  2c0fac8c9ef3648dcf3d1f2b03a56672ab4eaab2
+checksums           md5     645aeaa5473e7a8986cd629c5f7262bb \
+                    sha1    0c10aaa7f60762a4a2c2c907a2fee552eba4132c \
+                    rmd160  52882e20b0753b669bda60bce7f61f20f3245a86
 
 universal_variant   no
 build.target        tbb tbbmalloc
@@ -36,6 +36,10 @@ configure {
         set arch_flag intel32
     } elseif {${build_arch} eq "x86_64"} {
         set arch_flag intel64
+    } elseif {${build_arch} eq "ppc"} {
+        set arch_flag ppc
+    } elseif {${build_arch} eq "ppc64"} {
+        set arch_flag ppc64
     }
     build.env-append    arch=${arch_flag}
     test.env-append     arch=${arch_flag}
@@ -46,7 +50,7 @@ destroot {
     set build_dir "${worksrcpath}/build/${build_dir}_release"
     
     # fix paths
-    reinplace "s|\\(TBB22_INSTALL_DIR.\\)\".*\"|\\1\"${prefix}\"|g" \
+    reinplace "s|\\(TBB30_INSTALL_DIR.\\)\".*\"|\\1\"${prefix}\"|g" \
         ${build_dir}/tbbvars.sh ${build_dir}/tbbvars.csh
     reinplace "s|\\(tbb_bin.\\)\".*\"|\\1\"${prefix}/lib\"|g" \
         ${build_dir}/tbbvars.sh ${build_dir}/tbbvars.csh
