tcl/tk: version 8.5.9
git-svn-id: https://svn.macports.org/repository/macports/trunk@71976 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/tk/Portfile
+++ b/dports/x11/tk/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            tk
-version         8.5.8
+version         8.5.9
 categories      x11
 maintainers     mww openmaintainer
 description     Tcl Tool Kit
@@ -20,16 +20,16 @@ distname        ${name}${version}-src
 worksrcdir      ${name}${version}/unix
 checksums \
   ${distname}${extract.suffix} \
-                    md5     13bf90602e16fc530e05196431021dc6 \
-                    sha1    ea13b9d0bf611c7671c488bc0b5f3f739ad7e399 \
-                    rmd160  494a0d217ce6a81c10afb91b344c6110dd0986b0
+                    md5     7cdeb9feb61593f58a0ae61f2497580e \
+                    sha1    161a133e0b653d5fdf6fcff47bdbf768d73f3238 \
+                    rmd160  8b3f1381fecf88fd2272690ec6786ec180ecb2fd \
 # suck in Tcl as well so we can use it internally.
 distfiles-append    tcl${version}-src${extract.suffix}
 checksums-append \
   tcl${version}-src${extract.suffix} \
-                    md5     7f123e53b3daaaba2478d3af5a0752e3 \
-                    sha1    21de27a24633c7550383bc7c35736e9acd5cb3a8 \
-                    rmd160  dfba63e9a3896350b88f592301fbe6669a60b5c1
+                    md5     8512d8db3233041dd68a81476906012a \
+                    sha1    ae87c5e58ba20760d9bc77117d219bbf1b6a5557 \
+                    rmd160  d858c4fbe1a75bef9c4a4c03e50d8aa807a9d28b
 
 depends_build   port:pkgconfig
 
