php5-pcntl: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@71977 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/php/php5-pcntl/Portfile
+++ b/dports/php/php5-pcntl/Portfile
@@ -21,8 +21,8 @@ checksums               md5     21ceeeb232813c10283a5ca1b4c87b48 \
 
 use_parallel_build      yes
 
-post-activate {
-    ui_warn "${name} should not be enabled within a web server environment.
-Unexpected results may occur if any process control functions are used
-within a web server environment."
-}
+notes "
+${name} should not be enabled within a web server environment.\
+Unexpected results may occur if any process control functions are used\
+within a web server environment.
+"
