tbb: use a switch statement where that would be the most logical choice
git-svn-id: https://svn.macports.org/repository/macports/trunk@71978 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/tbb/Portfile
+++ b/dports/devel/tbb/Portfile
@@ -32,14 +32,17 @@ universal_variant   no
 build.target        tbb tbbmalloc
 
 configure {
-    if {${build_arch} eq "i386"} {
-        set arch_flag intel32
-    } elseif {${build_arch} eq "x86_64"} {
-        set arch_flag intel64
-    } elseif {${build_arch} eq "ppc"} {
-        set arch_flag ppc
-    } elseif {${build_arch} eq "ppc64"} {
-        set arch_flag ppc64
+    switch ${build_arch} {
+        i386 {
+            set arch_flag intel32
+        }
+        x86_64 {
+            set arch_flag intel64
+        }
+        ppc -
+        ppc64 {
+            set arch_flag ${build_arch}
+        }
     }
     build.env-append    arch=${arch_flag}
     test.env-append     arch=${arch_flag}
