tbb: fix so running "sudo port configure tbb" followed by "sudo port install tbb" does not fail
git-svn-id: https://svn.macports.org/repository/macports/trunk@71979 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/tbb/Portfile
+++ b/dports/devel/tbb/Portfile
@@ -28,25 +28,23 @@ checksums           md5     645aeaa5473e7a8986cd629c5f7262bb \
                     sha1    0c10aaa7f60762a4a2c2c907a2fee552eba4132c \
                     rmd160  52882e20b0753b669bda60bce7f61f20f3245a86
 
-universal_variant   no
+use_configure       no
 build.target        tbb tbbmalloc
 
-configure {
-    switch ${build_arch} {
-        i386 {
-            set arch_flag intel32
-        }
-        x86_64 {
-            set arch_flag intel64
-        }
-        ppc -
-        ppc64 {
-            set arch_flag ${build_arch}
-        }
+switch ${build_arch} {
+    i386 {
+        set arch_flag intel32
     }
-    build.env-append    arch=${arch_flag}
-    test.env-append     arch=${arch_flag}
+    x86_64 {
+        set arch_flag intel64
+    }
+    ppc -
+    ppc64 {
+        set arch_flag ${build_arch}
+    }
 }
+build.env-append    arch=${arch_flag}
+test.env-append     arch=${arch_flag}
 
 destroot {
     set build_dir [exec sh -c "cd ${worksrcpath} && ${build.env} make info | grep build_prefix | cut -f2 -d'='"]
