tbb: ensure we're UsingTheRightCompiler; see #23944
git-svn-id: https://svn.macports.org/repository/macports/trunk@71980 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/tbb/Portfile
+++ b/dports/devel/tbb/Portfile
@@ -28,6 +28,8 @@ checksums           md5     645aeaa5473e7a8986cd629c5f7262bb \
                     sha1    0c10aaa7f60762a4a2c2c907a2fee552eba4132c \
                     rmd160  52882e20b0753b669bda60bce7f61f20f3245a86
 
+patchfiles          patch-build-macos.inc.diff
+
 use_configure       no
 build.target        tbb tbbmalloc
 
@@ -43,11 +45,14 @@ switch ${build_arch} {
         set arch_flag ${build_arch}
     }
 }
+
+set compilers       "CONLY=${configure.cc} CPLUS=${configure.cxx}"
+build.args-append   ${compilers}
 build.env-append    arch=${arch_flag}
 test.env-append     arch=${arch_flag}
 
 destroot {
-    set build_dir [exec sh -c "cd ${worksrcpath} && ${build.env} make info | grep build_prefix | cut -f2 -d'='"]
+    set build_dir [exec sh -c "cd ${worksrcpath} && ${build.env} make info ${compilers} | grep build_prefix | cut -f2 -d'='"]
     set build_dir "${worksrcpath}/build/${build_dir}_release"
     
     # fix paths
