postfix: try to handle non-root installs a bit better
git-svn-id: https://svn.macports.org/repository/macports/trunk@71982 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/postfix/Portfile
+++ b/dports/mail/postfix/Portfile
@@ -121,7 +121,14 @@ destroot {
 }
 
 pre-install {
-        system "chown ${pf_mail_owner} ${destroot}${prefix}/var/spool/postfix/public/.turd_postfix"
+        if {[geteuid] == 0} {
+            system "chown -R ${pf_mail_owner} \
+                '${destroot}${prefix}/var/spool/postfix/public' \
+                '${destroot}${prefix}/var/lib/postfix'"
+        } else {
+            ui_msg "Insufficient privileges to chown files; you'll need to do this manually:"
+            ui_msg "sudo chown -R ${pf_mail_owner} ${prefix}/var/spool/postfix/public ${prefix}/var/lib/postfix"
+        }
 }
 
 post-activate {
