curlhandle: use frameworks_dir and extract.mkdir
git-svn-id: https://svn.macports.org/repository/macports/trunk@71983 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/curlhandle/Portfile
+++ b/dports/devel/curlhandle/Portfile
@@ -35,18 +35,14 @@ post-patch {
     reinplace "s|/usr/local/lib/libcurl|${prefix}/lib/libcurl|g" ${pbxproject}
 }
 
-extract.dir ${worksrcpath}
-
-pre-extract {
-    file mkdir ${worksrcpath}
-}
+extract.mkdir yes
 
 post-destroot {
-    xinstall -d ${destroot}/Library/Frameworks
+    xinstall -d ${destroot}${frameworks_dir}
     copy "${worksrcpath}/[file dirname ${xcode.project}]/build/UninstalledProducts/${my_name}.framework" \
-        ${destroot}/Library/Frameworks
+        ${destroot}${frameworks_dir}
 
-    set framework /Library/Frameworks/${my_name}.framework
+    set framework ${frameworks_dir}/${my_name}.framework
     set docdir ${framework}/Versions/A/Resources/Documentation
     xinstall -d ${destroot}${docdir}
     eval xinstall -m 0644 [glob ${worksrcpath}/Documentation/*.html] ${destroot}${docdir}
@@ -58,4 +54,3 @@ universal_variant   no
 livecheck.type  regex
 livecheck.url   ${homepage}
 livecheck.regex <td>(\\d+(?:\\.\\d+)*)</td>
-
