relames: update wrapper script to handle exit codes better (?) and handle files with spaces in their names; see #26670; add "supported_archs noarch"
git-svn-id: https://svn.macports.org/repository/macports/trunk@71984 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/relames/Portfile
+++ b/dports/textproc/relames/Portfile
@@ -4,9 +4,12 @@ PortSystem            1.0
 
 name                  relames
 version               20060319
+revision              1
 categories            textproc
 platforms             darwin
 maintainers           nomaintainer
+supported_archs       noarch
+
 description           Multi-Schema XML Validator to validate XML documents
 long_description      The Sun Multi-Schema XML Validator (MSV) is a Java \
                       technology tool to validate XML documents against \
