curlhandle: update homepage/master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@71985 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/curlhandle/Portfile
+++ b/dports/devel/curlhandle/Portfile
@@ -13,8 +13,8 @@ description     CURLHandle is a framework wrapper around a CURL
 long_description \
     ${description}
 
-homepage        http://curlhandle.sourceforge.net/
-master_sites    ${homepage}
+homepage        http://curlhandle.googlecode.com/
+master_sites    googlecode
 distname        ${my_name}_${version}
 extract.suffix  .tgz
 
