devel/bzr-explorer: Update to version 1.1.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@71986 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr-explorer/Portfile
+++ b/dports/devel/bzr-explorer/Portfile
@@ -4,7 +4,7 @@ PortSystem    1.0
 PortGroup     python26 1.0
 
 name          bzr-explorer
-version       1.0.2
+version       1.1.0
 epoch         1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    devel python
@@ -19,11 +19,11 @@ long_description \
     functionality. Alternatively, the applets from the bzr-gtk plug-in can be \
     used if it is installed.
 homepage      http://doc.bazaar.canonical.com/explorer/en/
-master_sites  https://launchpad.net/${name}/${branch}/${version}/+download/
+master_sites  https://launchpad.net/${name}/${branch}/${branch}/+download/
 
-checksums     md5     2ccdb66043c55f7fcf5fbd2fe745cd4f \
-              sha1    ad57c9cbcde2004af76ed29b520ddd075c2d15fe \
-              rmd160  43af18e021ba4e975ac4ceabc928c266402ddef8
+checksums     md5     423099eb4ee54c1fc2b3b37a2d7469ce \
+              sha1    7d7c61e82f696c9f531880db107c594bcf96225b \
+              rmd160  91bd6f32a5ffc91a84cad44c7e0fb81781c7db19
 
 depends_lib-append  port:qbzr
 
