tcl-tls: update to 1.6; see #26362
git-svn-id: https://svn.macports.org/repository/macports/trunk@71987 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/tcl-tls/Portfile
+++ b/dports/devel/tcl-tls/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name	   tcl-tls
-version	   1.5.0
-revision        1
+version	   1.6
 categories	devel
 platforms	darwin
 maintainers	jmpp openmaintainer
@@ -16,13 +15,13 @@ long_description	TLS is an OpenSSL / RSA-bsafe Tcl extension that provides secur
 homepage	http://tls.sourceforge.net
 master_sites	sourceforge:tls
 distfiles	tls${version}-src${extract.suffix}
-checksums	md5 9eeab472475773b3810acc808ebec759
+
+checksums       sha1    badee4d0a096e9951ffc1f82a6530f78b2404a2c \
+                rmd160  7f833422dadcab06b3c251f5b7a67a0a1c8fe6a1
 
 depends_lib	port:openssl
 
-worksrcdir	tls1.5
-
-patchfiles	patch-Makefile.in.diff
+worksrcdir	tls${version}
 
 configure.args	--with-ssl-dir=${prefix}
 
