icu: update livecheck url and regex.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71988 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/icu/Portfile
+++ b/dports/devel/icu/Portfile
@@ -111,5 +111,5 @@ platform freebsd {
     destroot.env    MAKE=/usr/local/bin/gmake
 }
 
-livecheck.url   http://icu-project.org/download/latest_milestone.html
-livecheck.regex {\((\d+(?:\.\d+)*)\)</title>}
+livecheck.url   http://site.icu-project.org/download
+livecheck.regex {>ICU4C \((\d+(?:\.\d+)*)\)<}
