--- a/dports/gnome/devhelp/Portfile
+++ b/dports/gnome/devhelp/Portfile
@@ -36,6 +36,12 @@ configure.args  --disable-schemas-install
 
 configure.python ${prefix}/bin/python2.6
 
+#
+# webkit-gtk is not universal
+#
+
+universal_variant no
+
 post-activate {
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
