--- a/dports/textproc/epubcheck/Portfile
+++ b/dports/textproc/epubcheck/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 
 name                    epubcheck
 version                 1.0.5
+revision                1
 categories              textproc
 platforms               darwin
 maintainers             nomaintainer
