--- a/dports/textproc/epubcheck/files/epubcheck.in
+++ b/dports/textproc/epubcheck/files/epubcheck.in
@@ -1,15 +1,2 @@
 #!/usr/bin/env sh
-
-MYTMP=/tmp/epubcheck$$.txt
-
-java -classpath @@EPUBCHECK@@ -jar @@EPUBCHECK@@/epubcheck.jar $@ 2>&1 | tee ${MYTMP}
-
-MYERR=$(grep "^ERROR" ${MYTMP} | wc -l)
-
-rm -f ${MYTMP}
-
-if [ ${MYERR} -ne 0 ]; then
-    exit 1
-fi
-
-exit 0
+exec java -classpath @@EPUBCHECK@@ -jar @@EPUBCHECK@@/epubcheck.jar "$@" 
