ruby/rb-rabbit: upgrade to 0.9.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@71991 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-rabbit/Portfile
+++ b/dports/ruby/rb-rabbit/Portfile
@@ -3,7 +3,7 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		rabbit 0.6.5 setup.rb {README.en sample misc}
+ruby.setup		rabbit 0.9.0 setup.rb {README.en sample misc}
 revision		0
 maintainers		kimuraw
 description		An application to do presentation with RD document.
@@ -27,6 +27,12 @@ depends_lib-append	port:rb-gtk2 port:rb-rsvg port:rb-poppler \
 # rabbiter requires tweetstream and password
 depends_lib-append	port:rb-tweetstream port:rb-password
 
+# disable source rwiki to avoid crash with openssl-1.0.0.
+# port:glib2 is linking /usr/lib/libcrypto.0.9.8.dylib via Carbon.framework.
+# ruby is a flat namespace program. We face problems wheh ruby loads both of
+# libcrypto.0.9.8.dylib from MacOSX and libcrypto.1.0.0.dylib from MacPorts.
+patchfiles			patch-lib-rabbit-source-rwiki.rb.diff
+
 post-build {
 	reinplace "s|^#!.*ruby|#!${ruby.bin}|" \
 		${worksrcpath}/bin/rabbit \
@@ -34,16 +40,16 @@ post-build {
 		${worksrcpath}/bin/rabbit-theme-manager \
 		${worksrcpath}/bin/rabrick \
 		${worksrcpath}/bin/rabbirc \
-		${worksrcpath}/bin/rabbitter
+		${worksrcpath}/bin/rabbiter
 }
 post-destroot {
 	delete "${destroot}${prefix}/bin/rabbit.bat"
 }
 
 master_sites    http://www.cozmixng.org/~kou/download/
-checksums		md5 9d2122bdae51afa3c34f7e7406c4e2ce \
-				rmd160 c7acf78ea025dc65d4e78ed94971c3fe130413b9 \
-				sha1 8533d55a3ae51a05360cd2fc73cf4f80d814c969
+checksums		md5 09a7acdf58cfbcbe47cdd2e9bc573954 \
+				rmd160 845c825e2d1db3a94533616d9657aa7dcadcaea1 \
+				sha1 da4734ac42c1c0b68ef623eb2740dcf66cd22b30
 
 livecheck.type	regex
 livecheck.url	http://raa.ruby-lang.org/project/rabbit/
