xbase: homepage updated
git-svn-id: https://svn.macports.org/repository/macports/trunk@71996 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/xbase/Portfile
+++ b/dports/databases/xbase/Portfile
@@ -16,7 +16,7 @@ long_description	Xbase is an XBase compatible C++ class library. It \
 				and file locking), and limited support is also supplied for \
 				.NTX (clipper index) files.
 
-homepage		http://linux.techassocinc.com/projects/xdb/
+homepage		http://linux.techass.com/projects/xdb/
 master_sites		sourceforge:xdb
 checksums		md5 9b29362031716a12491beb9f8cc882f2
 
