qdbm: update to 1.8.78, update homepage and livecheck; see #26517 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71998 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/qdbm/Portfile
+++ b/dports/databases/qdbm/Portfile
@@ -4,7 +4,7 @@
 PortSystem		1.0
 
 name			qdbm
-version             1.8.77
+version             1.8.78
 categories      databases
 #license            LGPL
 maintainers     gmail.com:rsky0711 nifty.com:pelopor
@@ -17,13 +17,11 @@ long_description	\
 	data and character string can be used as a key and a value. There is neither\
 	concept of data tables nor data types. Records are organized in hash table\
 	or B+ tree.
-homepage	 	http://qdbm.sourceforge.net/
-master_sites    ${homepage} \
-				sourceforge:${name}
-checksums           md5     084e07824e231969356ec7cefac97985 \
-                    sha1    e277e77bc0209cc4c8eb205a9082ef880048445c \
-                    rmd160  3c684a4127204faf32472d29d7fd64a07e394332
+homepage	 	http://fallabs.com/qdbm/index.html
+master_sites    http://fallabs.com/qdbm/
 
+checksums           sha1    8c2ab938c2dad8067c29b0aa93efc6389f0e7076 \
+                    rmd160  84c812eaa0ddde822dd37515de67287098bd3a4b
 
 depends_lib		port:libiconv port:zlib
 
@@ -62,3 +60,6 @@ variant lzo {
 		depends_lib-append      port:lzo2
 		configure.args-append   --enable-lzo
 }
+
+livecheck.type      regex
+livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
