atk: disable GObject introspection which currently breaks build if gobject-introspection is installed.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71999 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/atk/Portfile
+++ b/dports/devel/atk/Portfile
@@ -36,9 +36,8 @@ archcheck.files-append  lib/libglib-2.0.dylib \
                         lib/libintl.dylib \
                         lib/libiconv.dylib
 
-configure.args          --enable-static
-
-use_parallel_build      yes
+configure.args          --enable-static \
+                        --enable-introspection=no
 
 livecheck.type          regex
 livecheck.url           http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
