libgtop: update to version 2.28.2, dependencies, configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72000 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgtop/Portfile
+++ b/dports/gnome/libgtop/Portfile
@@ -4,25 +4,27 @@
 PortSystem 1.0
 
 name		libgtop
-version		2.28.1
+version		2.28.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
-description	A library for gtop2
+
+description	A library for portably obtaining information about processes
+
 long_description \
-		This is library for the gtop2, the GNOME 2.0 \
-		version of top command. The top command is a tool \
-		to display and update information about the top \
-		cpu processes.
+                libgtop is a library for portably obtaining information about processes, \
+                such as their PID, memory usage, etc.
+
 maintainers	devans openmaintainer
 categories	gnome
 platforms	darwin
 homepage	http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     994c299b6dba330524a67ea45776b3ab \
-                sha1    f0b1f5ee7417cb0b275143fd0956f4753505a21f \
-                rmd160  ed04b334810730cd61c7e8b0734e2e5570487753
+checksums       md5     ed44d736efd97d062b77621de6aff439 \
+                sha1    5139d3d2a98c39c36b5b61352629bf16d54dc68a \
+                rmd160  61b1ac4e9c7212a04ff4591edd1a1c154f689627
 
 depends_build   port:pkgconfig \
+                port:intltool \
                 port:gtk-doc
 
 depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2
@@ -31,9 +33,7 @@ use_bzip2 	yes
 
 patchfiles      patch-sysdeps__darwin__proclist.c.diff
 
-configure.args	--mandir=${prefix}/share/man \
-                --infodir=${prefix}/share/info \
-                --x-includes=${prefix}/include \
+configure.args	--x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
 
 livecheck.type  regex
