libgnomeprint: update to version 2.18.8, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72001 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomeprint/Portfile
+++ b/dports/gnome/libgnomeprint/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            libgnomeprint
-version         2.18.7
+version         2.18.8
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -18,24 +18,20 @@ homepage        http://www.levien.com/gnome/print-arch.html
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     d66b81ee8aa3b3a33f5efc9a47ce07e3 \
-                sha1    f7c550abacf22f602ca097f9033803bf9d4556de \
-                rmd160  5202ef3d8187f6b01a16ac8f97d924074cbdf91d
+checksums       md5     63b05ffb5386e131487c6af30f4c56ac \
+                sha1    cfb77148923b24b1651982a21b3cb55e312ff6d5 \
+                rmd160  4f786ad61dc27177c350a5baa27cfc8b1140c32e
 
 depends_build   port:pkgconfig \
+                port:flex \
                 port:bison \
-                path:bin/perl:perl5 \
-                port:p5-xml-parser
+                port:intltool \
+                port:gtk-doc
 
-depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2 \
-                port:libart_lgpl \
+depends_lib     port:libgnomecups \
                 path:lib/pkgconfig/pango.pc:pango \
-                port:libxml2 \
-                port:fontconfig \
-                port:freetype \
-                port:popt \
-                port:libgnomecups \
-                port:zlib
+                port:libart_lgpl \
+                port:libxml2
 
 configure.args  --disable-gtk-doc
 
