libgnomeprintui: update to version 2.18.6, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72002 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomeprintui/Portfile
+++ b/dports/gnome/libgnomeprintui/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            libgnomeprintui
-version         2.18.5
+version         2.18.6
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -18,16 +18,15 @@ homepage        http://www.gnome.org/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     66c1cf3a9ead428585c2c44e6110ebb7 \
-                sha1    ef641569b5a454e89250ae13da5b74620552e9d8 \
-                rmd160  9604a58d2da520cec5506e9ba44962eca9155974
+checksums       md5     cbfab252ec7e9dc25bb1fe1610c3270b \
+                sha1    07030a1726ccb927158591087fb0e96f40d95cfa \
+                rmd160  772ebeb7e59906734014eb8f2f2fedba91c8f1a9
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:gnome-icon-theme
+                port:gtk-doc
 
 depends_lib     port:gtk2 \
-                port:jpeg \
                 port:libgnomeprint \
                 port:libgnomecanvas
 
