jack: add dependency on libsamplerate, increment revision, closes #26617, maintainer timeout.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72003 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/jack/Portfile
+++ b/dports/audio/jack/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            jack
 version         0.118.0
+revision        1
 distname        jack-audio-connection-kit-${version}
 
 categories      audio
@@ -31,7 +32,8 @@ configure.args  --enable-posix-shm \
 depends_lib     port:libxml2 \
                 port:libxslt \
                 port:zlib \
-                port:libsndfile
+                port:libsndfile \
+                port:libsamplerate
 
 livecheck.type  regex
 livecheck.url   ${homepage}
